--- a/demos/using_vectors/index.html
+++ b/demos/using_vectors/index.html
@@ -8,9 +8,10 @@
     <title>WebCLGL 2.0</title> 
    
     <script src="../../WebCLGLUtils.class.js"></script>
-    <script src="../../WebCLGLBuffer.class.js"></script>
-    <script src="../../WebCLGLKernel.class.js"></script>
-   	<script src="../../WebCLGL.class.js"></script>
+	<script src="../../WebCLGLBuffer.class.js"></script>
+	<script src="../../WebCLGLKernel.class.js"></script>
+	<script src="../../WebCLGLKernelProgram.class.js"></script>
+	<script src="../../WebCLGL.class.js"></script>
    
   </head>
   <body style="background-color:#FFF"> 
