--- a/demos/basic_sum_AB/index.html
+++ b/demos/basic_sum_AB/index.html
@@ -35,8 +35,8 @@
 			A.push(randA);
 			B.push(randB);
 		}
-		document.getElementById('DIVA').innerText = A;
-		document.getElementById('DIVB').innerText = B;
+		document.getElementById('DIVA').appendChild(document.createTextNode(A));
+		document.getElementById('DIVB').appendChild(document.createTextNode(B));
 		
 		
 		
@@ -46,7 +46,7 @@
 		for(var n = 0; n < _length; n++) {
 			C_CPU[n] = A[n]+B[n];
 		}
-		document.getElementById('DIVC_CPU').innerText = C_CPU;
+		document.getElementById('DIVC_CPU').appendChild(document.createTextNode(C_CPU));
 		
 		
 		
@@ -77,7 +77,7 @@
 		
 		
 		var C_GPU = webCLGL.enqueueReadBuffer_Float(buffer_C);
-		document.getElementById('DIVC_GPU').innerText = C_GPU;
+		document.getElementById('DIVC_GPU').appendChild(document.createTextNode(Array.prototype.slice.call(C_GPU[0])));
 		</script>
 	</body>
 </html>
