--- a/demos/basic_sum_AB_and_number/index.html
+++ b/demos/basic_sum_AB_and_number/index.html
@@ -9,6 +9,7 @@
    
     <script src="../../WebCLGLUtils.class.js"></script>
 	<script src="../../WebCLGLBuffer.class.js"></script>
+	<script src="../../WebCLGLBufferItem.class.js"></script>
 	<script src="../../WebCLGLKernel.class.js"></script>
 	<script src="../../WebCLGLKernelProgram.class.js"></script>
 	<script src="../../WebCLGL.class.js"></script>
@@ -73,7 +74,6 @@
 		kernel_add.setKernelArg(0, buffer_A);
 		kernel_add.setKernelArg(1, buffer_B);
 		kernel_add.setKernelArg(2, num);
-		kernel_add.compile();
 		
 		webCLGL.enqueueNDRangeKernel(kernel_add, buffer_C); 
 		
