--- a/demos/benchmarks/index.html
+++ b/demos/benchmarks/index.html
@@ -9,6 +9,7 @@
    
     <script src="../../WebCLGLUtils.class.js"></script>
 	<script src="../../WebCLGLBuffer.class.js"></script>
+	<script src="../../WebCLGLBufferItem.class.js"></script>
 	<script src="../../WebCLGLKernel.class.js"></script>
 	<script src="../../WebCLGLKernelProgram.class.js"></script>
 	<script src="../../WebCLGL.class.js"></script>
@@ -91,7 +92,6 @@
 				kernel_add.setKernelArg(0, buffer_A);
 				kernel_add.setKernelArg(1, buffer_B);
 				kernel_add.setKernelArg(2, 0.01);
-				kernel_add.compile();
 
 				var dat = new Date().getTime();
 				webCLGL.enqueueNDRangeKernel(kernel_add, buffer_C); // First execution: compile and exec; Last executions: only exec
