--- a/demos/compare_values_with_other_ids/index.html
+++ b/demos/compare_values_with_other_ids/index.html
@@ -9,6 +9,7 @@
    
     <script src="../../WebCLGLUtils.class.js"></script>
 	<script src="../../WebCLGLBuffer.class.js"></script>
+	<script src="../../WebCLGLBufferItem.class.js"></script>
 	<script src="../../WebCLGLKernel.class.js"></script>
 	<script src="../../WebCLGLKernelProgram.class.js"></script>
 	<script src="../../WebCLGL.class.js"></script>
@@ -77,7 +78,6 @@
 			kernel.setKernelArg(0,0.01);
 			kernel.setKernelArg(1,buffer_A);
 			kernel.setKernelArg(2,buffer_B);
-			kernel.compile();
 			
 			webCLGL.enqueueNDRangeKernel(kernel, buffer_A); 
       
