--- a/demos/WebCLGLWork_3D_graphics/index.html
+++ b/demos/WebCLGLWork_3D_graphics/index.html
@@ -30,12 +30,12 @@
 		var arrPP = [];
 		arrPP.push({"x": 0.0, "y": 0.0, "z": 0.0});
 
-    var arrayNodeId = [];
+		var arrayNodeId = [];
 		var arrayNodePosXYZW = [];
 		var arrayNodeVertexPos = [];
 		var arrayNodeVertexColor = [];
 		var arrayNodeIndices = [];
-    var nodeId = 0;
+		var nodeId = 0;
 		var startIndexId = 0;
 
 		var webCLGL = new WebCLGL(gl);
@@ -49,7 +49,7 @@
 
 				// vertex source
 				['void main(float4*kernel posXYZW,'+ // *kernel for make update in vertex from lasts kernel
-              'float* nodeId,'+
+							'float* nodeId,'+
 							'float4* nodeVertexPos,'+
 							'float4* nodeVertexCol,'+
 							'mat4 PMatrix,'+
@@ -57,7 +57,7 @@
 							'mat4 nodeWMatrix,'+
 							'float nodesSize) {'+
 					'vec2 x = get_global_id();'+
-          'vec2 xx = get_global_id(nodeId[x]);'+
+          			'vec2 xx = get_global_id(nodeId[x]);'+
 
 					'vec4 nodePosition = posXYZW[xx];\n'+
 					'vec4 nodeVertexPosition = nodeVertexPos[x];\n'+
@@ -177,7 +177,7 @@
 			for(var n=0; n < box.vertices.length/3; n++) {
 				var idxVertex = n*3;
 
-        arrayNodeId.push(nodeId);
+        		arrayNodeId.push(nodeId);
 				arrayNodePosXYZW.push(jsonIn.position[0], jsonIn.position[1], jsonIn.position[2], 1.0);
 				arrayNodeVertexPos.push(box.vertices[idxVertex], box.vertices[idxVertex+1], box.vertices[idxVertex+2], 1.0);
 				arrayNodeVertexColor.push(jsonIn.color[0], jsonIn.color[1], jsonIn.color[2], 1.0);
@@ -196,13 +196,13 @@
 			}
 			startIndexId += (maxNodeIndexId+1);
 
-      nodeId++;
+      		nodeId++;
 		};
 
 		var updateWork = function() {
 			updatePP(clglWork);
 
-      clglWork.setArg("nodeId", arrayNodeId);
+      		clglWork.setArg("nodeId", arrayNodeId);
 			clglWork.setArg("posXYZW", arrayNodePosXYZW);
 			clglWork.setArg("nodeVertexPos", arrayNodeVertexPos);
 			clglWork.setArg("nodeVertexCol", arrayNodeVertexColor);
@@ -262,9 +262,14 @@
 		var tick = function() {
 			window.requestAnimFrame(tick);
 
-			clglWork.enqueueNDRangeKernel();
-
-      gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+			clglWork.enqueueNDRangeKernel("posXYZW", clglWork.buffers_TEMP["posXYZW"]);
+			clglWork.enqueueNDRangeKernel("dir", clglWork.buffers_TEMP["dir"]);
+			
+			webCLGL.copy(clglWork.buffers_TEMP["posXYZW"], clglWork.buffers["posXYZW"]);
+			webCLGL.copy(clglWork.buffers_TEMP["dir"], clglWork.buffers["dir"]);
+			
+			
+      		gl.bindFramebuffer(gl.FRAMEBUFFER, null);
 			gl.viewport(0, 0, 512, 512);
 			gl.clearColor(0.0, 0.0, 0.0, 1.0);
 			//gl.clearDepth(1.0);
@@ -273,16 +278,16 @@
 			gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
 
-      clglWork.setArg("PMatrix", transpose(getProyection()));
-      clglWork.setArg("cameraWMatrix", transpose(new Float32Array([	1.0, 0.0, 0.0, 0.0,
-                                      0.0, 1.0, 0.0, 0.0,
-                                      0.0, 0.0, 1.0, -100.0,
-                                      0.0, 0.0, 0.0, 1.0])));
-      clglWork.setArg("nodeWMatrix", transpose(new Float32Array([	1.0, 0.0, 0.0, 0.0,
-                                    0.0, 1.0, 0.0, 0.0,
-                                    0.0, 0.0, 1.0, 0.0,
-                                    0.0, 0.0, 0.0, 1.0])));
-      clglWork.setArg("nodesSize", 30);
+			clglWork.setArg("PMatrix", transpose(getProyection()));
+			clglWork.setArg("cameraWMatrix", transpose(new Float32Array([	1.0, 0.0, 0.0, 0.0,
+			                                0.0, 1.0, 0.0, 0.0,
+			                                0.0, 0.0, 1.0, -100.0,
+			                                0.0, 0.0, 0.0, 1.0])));
+			clglWork.setArg("nodeWMatrix", transpose(new Float32Array([	1.0, 0.0, 0.0, 0.0,
+			                              0.0, 1.0, 0.0, 0.0,
+			                              0.0, 0.0, 1.0, 0.0,
+			                              0.0, 0.0, 0.0, 1.0])));
+			clglWork.setArg("nodesSize", 30);
 			clglWork.enqueueVertexFragmentProgram("posXYZW", "vertexFragmentProgram1", gl.TRIANGLES, 24);
 		};
 
