--- a/demos/basic_sum_AB/index.html
+++ b/demos/basic_sum_AB/index.html
@@ -4,13 +4,9 @@
 	<title>WebCLGL</title>
     <meta name="description" content="WebCLGL" />
     <meta charset=utf-8 />
-   
-    <title>WebCLGL 2.0</title> 
-   
-    <script src="../../WebCLGLUtils.class.js"></script>
-	<script src="../../WebCLGLBuffer.class.js"></script>
-	<script src="../../WebCLGLBufferItem.class.js"></script>
-	<script src="../../WebCLGLKernel.class.js"></script>
+
+    <title>WebCLGL</title>
+
 	<script src="../../WebCLGL.class.js"></script>
    
   </head>
