--- a/demos/gpufor_graphics_geometry/index.html
+++ b/demos/gpufor_graphics_geometry/index.html
@@ -18,22 +18,46 @@
         <script>
 
             var offset = 100.0;
+            var geometryLength = 24;
+            var box = loadBox();
 
             var arrayNodeId = [];
-            var nodeId = 0;
             var arrayNodePosXYZW = [];
+            var arrayNodeVertexPos = [];
             var arrayNodeVertexColor = [];
+            var arrayNodeIndices = [];
+            var nodeId = 0;
+            var startIndexId = 0;
+
             var arrayNodeDir = [];
 
-            // initialize some nodes
             var iniNodes = (function(numNodes) {
                 var addNode = function(jsonIn) {
-                    arrayNodeId.push(nodeId);
-                    arrayNodePosXYZW.push(jsonIn.position[0], jsonIn.position[1], jsonIn.position[2], 1.0);
-                    arrayNodeVertexColor.push(jsonIn.color[0], jsonIn.color[1], jsonIn.color[2], 1.0);
+                    // vertices
+                    for(var n=0; n < box.vertices.length/3; n++) {
+                        var idxVertex = n*3;
 
-                    var x = Math.random(); var y = Math.random(); var z = Math.random();
-                    arrayNodeDir.push(x, y, z, 255);
+                        arrayNodeId.push(nodeId);
+                        arrayNodePosXYZW.push(jsonIn.position[0], jsonIn.position[1], jsonIn.position[2], 1.0);
+                        arrayNodeVertexPos.push(box.vertices[idxVertex], box.vertices[idxVertex+1], box.vertices[idxVertex+2], 1.0);
+                        arrayNodeVertexColor.push(jsonIn.color[0], jsonIn.color[1], jsonIn.color[2], 1.0);
+
+                        var x = Math.random(); var y = Math.random(); var z = Math.random();
+                        arrayNodeDir.push(x, y, z, 255);
+                    }
+
+                    // indices
+                    var maxNodeIndexId = 0;
+                    for(var n=0; n < box.indices.length; n++) {
+                        var idxIndex = n;
+
+                        arrayNodeIndices.push(startIndexId+box.indices[idxIndex]);
+
+                        if(box.indices[idxIndex] > maxNodeIndexId) {
+                            maxNodeIndexId = box.indices[idxIndex];
+                        }
+                    }
+                    startIndexId += (maxNodeIndexId+1);
 
                     nodeId++;
                 };
@@ -46,7 +70,8 @@
                     var node = addNode({"position": [x, y, z],
                         "color": [Math.random(), Math.random(), Math.random()]});
                 }
-            })(100000); // 100K
+            })(1800);
+
 
             pole_code = function() {
                 return  'float offset;vec3 polePos; vec3 cc;float distanceToPole;\n'+
@@ -69,7 +94,9 @@
                                     // VALUES
                                     {"float4* posXYZW": arrayNodePosXYZW,
                                     "float4* dir": arrayNodeDir,
+                                    "indices": arrayNodeIndices,
                                     "float*attr nodeId": arrayNodeId,
+                                    "float4*attr nodeVertexPos": arrayNodeVertexPos,
                                     "float4*attr nodeVertexCol": arrayNodeVertexColor,
                                     "mat4 PMatrix": transpose(getProyection()),
                                     "mat4 cameraWMatrix": transpose(new Float32Array([	1.0, 0.0, 0.0, 0.0,
@@ -94,7 +121,7 @@
                                     'vec3 currentPos = posXYZW[n].xyz;\n'+
                                     pole_code()+
                                     'vec3 newDir = currentDir*0.995;\n'+
-                                    'return vec4(newDir,0.0);\n'],
+                                    'return vec4(newDir,1.0);\n'],
 
                                     // KERNEL PROGRAM 2 (for to update "posXYZW" argument from updated "dir" argument on KERNEL1)
                                     ["posXYZW += dir"],
@@ -104,9 +131,10 @@
                                         'varying vec4 vVertexColor;',
 
                                         // vertex source
-                                        'vec2 xx = get_global_id(nodeId[], uBufferWidth, 1.0);'+
+                                        'vec2 xx = get_global_id(nodeId[], uBufferWidth, '+geometryLength.toFixed(1)+');'+
 
                                         'vec4 nodePosition = posXYZW[xx];\n'+ // now use the updated posXYZW
+                                        'vec4 nodeVertexPosition = nodeVertexPos[];\n'+
                                         'vec4 nodeVertexColor = nodeVertexCol[];\n'+
 
                                         'mat4 nodepos = nodeWMatrix;'+
@@ -115,7 +143,7 @@
                                         'nodepos[3][2] = nodePosition.z;'+
 
                                         'vVertexColor = nodeVertexColor;'+
-                                        'gl_Position = PMatrix * cameraWMatrix * nodepos * vec4(1.0, 1.0, 1.0, 1.0);\n'+
+                                        'gl_Position = PMatrix * cameraWMatrix * nodepos * nodeVertexPosition;\n'+
                                         'gl_PointSize = 2.0;\n',
 
                                         // fragment head
@@ -151,7 +179,7 @@
                 //gpufG.setArg("pole1X", 30);
 
 
-                gpufG.processGraphic("posXYZW", gl.POINTS);
+                gpufG.processGraphic("posXYZW", gl.TRIANGLES);
             };
         </script>
     </body>
